2003-11-17  Ettore Perazzoli  <ettore@ximian.com>

	* evolution.xml: Rename verb "OpenFolderInNewWindow" to
	"OpenNewWindow".  Add a separator before it in the File -> New
	submenu.

2003-11-13  Ettore Perazzoli  <ettore@ximian.com>

	* evolution.xml: Remove type="toggle" from the "ToggleOffline"
	verb; I'm not sure why it was there in the first place and it was
	causing BonoboUI to spew warnings.

2003-11-13  Ettore Perazzoli  <ettore@ximian.com>

	* evolution.xml: Ooops, add missing closing </popups> tag.

2003-11-13  Ettore Perazzoli  <ettore@ximian.com>

	* evolution.xml: Add back send/receive command and toolbar button.

2003-11-13  Ettore Perazzoli  <ettore@ximian.com>

	* evolution.xml: Add "NewPopup" popup back.

2003-10-10  Rodrigo Moya <rodrigo@ximian.com>

	* evolution-calendar.xml: removed stock icon for "NewCalendar"
	verb, and added items for creating calendar events.

2003-10-10  Rodrigo Moya <rodrigo@ximian.com>

	* evolution-calendar.xml: added 'New Calendar' menu item.

2003-10-10  Hans Petter Jansson  <hpj@ximian.com>

	* evolution-calendar.xml: Add calendar list view task button.

2003-10-02  Rodney Dawes  <dobey@ximian.com>

	* evolution-mail-message.xml: Patch to use Control-L for "Reply
	to list" from Karsten Bräckelmann

2003-08-27  Not Zed  <NotZed@Ximian.com>

	* evolution-mail-message.xml: Moved EditCopy EditPaste, and
	EditCut here.

	* evolution-mail-list.xml: Removed EditCopy, EditPaste, and
	EditCut.

2003-09-11  Tim Wo <tim.wo@sun.com>

	* evolution-contact-editor.xml: add mnemonic "C" for "Save and _Close",
	"D" for "_Delete", "l" for "Close". Fixes bug #48096
	* evolution-contact-list-editor.xml: add mnemonic "C" for "Save and
	_Close", "D" for "_Delete", "l" for "Close". Fixes bug #48096
	* evolution-signature-editor.xml: add mnemonic "C" for "Save and
	_Close", change mnemonic "C" to "l" for "Close".  Fixes bug #48205

2003-09-05  Yuedong Du  <uuedong.du@sun.com>
